feat: implement system admin dashboard and genre metadata management